--- a/scss/styles/bootstrap/mixins.scss
+++ b/scss/styles/bootstrap/mixins.scss
@@ -1,4 +1,5 @@
-// Mixins
+// Styles - https://github.com/adamwdraper/styles
+// Mixins 0.0.1
 // -----------------------------------------------------------------
 
 // Clearfix
