--- a/scss/styles/bootstrap/utilities.scss
+++ b/scss/styles/bootstrap/utilities.scss
@@ -1,5 +1,6 @@
-// UTILITY Classes
-// --------------------------------------------------
+// Styles - https://github.com/adamwdraper/styles
+// Utilities 0.0.1
+// -----------------------------------------------------------------
 
 // Clearfix
 // --------
