--- a/scss/styles/components/dropdown.scss
+++ b/scss/styles/components/dropdown.scss
@@ -1,9 +1,7 @@
-// Dropdown.scss
+// Styles - https://github.com/adamwdraper/styles
+// Dropdowns 0.0.1
 // -----------------------------------------------------------------
 
-
-// Dropdowns
-// -----------------------
 .dropdown {
     position: relative;
 
