--- a/scss/styles/components/icon.scss
+++ b/scss/styles/components/icon.scss
@@ -1,5 +1,5 @@
-// Icons.scss
-// Snippets of reusable CSS to develop faster and keep code readable
+// Styles - https://github.com/adamwdraper/styles
+// Icons 0.0.1
 // -----------------------------------------------------------------
 
 @mixin icon-type-color($type) {
