--- a/scss/styles/components/input.scss
+++ b/scss/styles/components/input.scss
@@ -1,5 +1,6 @@
-// Inputs
-// -----------------------
+// Styles - https://github.com/adamwdraper/styles
+// Inputs 0.0.1
+// -----------------------------------------------------------------
 
 input, textarea {
     vertical-align: middle;
