--- a/scss/styles/components/table.scss
+++ b/scss/styles/components/table.scss
@@ -1,5 +1,6 @@
-// tables
-// -----------------------------------
+// Styles - https://github.com/adamwdraper/styles
+// Tables 0.0.1
+// -----------------------------------------------------------------
 
 // Default zebra-stripe styles (alternating gray and transparent backgrounds)
 table {
