--- a/scss/styles/variables.scss
+++ b/scss/styles/variables.scss
@@ -1,5 +1,6 @@
-// Variables to customize the look and feel of Rounded Theme
-// --------------------------------------------------------
+// Styles - https://github.com/adamwdraper/styles
+// Variables 0.0.1
+// -----------------------------------------------------------------
 
 // Grays
 // -------------------------
