--- a/scss/styles/bootstrap/bootstrap.scss
+++ b/scss/styles/bootstrap/bootstrap.scss
@@ -1,5 +1,11 @@
-// Include structure files
-// --------------------------------------------------------
+/*!
+ * Styles 0.0.1 - https://github.com/adamwdraper/styles
+ *
+ * (c) 2012, Adam Draper - https://github.com/adamwdraper
+ *
+ * MIT & BSD
+ *
+ */
 
 // import global setup
 @import "functions";
