--- a/scss/styles/components/tab.scss
+++ b/scss/styles/components/tab.scss
@@ -1,10 +1,7 @@
-// Tabs
-// Snippets of reusable CSS to develop faster and keep code readable
+// Styles - https://github.com/adamwdraper/styles
+// Tab 0.0.1
 // -----------------------------------------------------------------
 
-
-// Horizontal Default Tabs
-// -----------------------
 .tabs {
     margin-bottom: .7em;
     border-bottom: 1px solid #DDD;
