add table borders and striped, add vars to code and tables

--- a/scss/styles/components/auto-suggest.scss
+++ b/scss/styles/components/auto-suggest.scss
@@ -28,7 +28,7 @@
                 padding: pxem(7) pxem(10);
 
                 &:hover, &.active {
-                    background: $jLightBlue;
+                    background: #EDF4FC;
                 }
 
                 &.title {
