--- a/scss/styles/variables.scss
+++ b/scss/styles/variables.scss
@@ -26,17 +26,10 @@ $orange: #f89406;
 $pink: #c3325f;
 $purple: #7a43b6;
 
-$jLightBlue: #EDF4FC;
-$jDarkBlue: #0066CC;
-$jBrightBlue: #2E9FFF;
-$jDarkGreen: #598700;
-$jGreen: #8DBF02;
-$jLightGreen: #B0DB36;
-$jOrange: #FF6C14;
-
-
-$primary: $jGreen;
-$secondary: $jDarkBlue;
+// Types and type colors
+// -------------------------
+$primary: #8DBF02;
+$secondary: #0066CC;
 $alert: $gray;
 $active: #49AFCD;
 $info: #49AFCD;
@@ -177,3 +170,17 @@ $alertLargeBorderRadius: $largeInnerBorderRadius;
 $alertBackgroundVarient: 35%;
 $alertBorderVarient: 25%;
 $alertColorVarient: 18%;
+
+// Code
+// -------------------------
+$codeColor: $grayDark;
+$codeBackground: #f8f8f8;
+$codeBorder: 1px solid $grayLight;
+$codeBorderRadius: $borderRadius;
+
+// Tables
+// -------------------------
+$tableBackground: #F8F8F8;
+$tableBorder: 1px solid $grayLight;
+$tableStripedBackground: $grayLightest;
+$tableBorderRadius: $borderRadius;
