--- a/scss/styles/components/code.scss
+++ b/scss/styles/components/code.scss
@@ -7,7 +7,8 @@ pre {
     color: $codeColor;
     display: block;
     padding: pxem(10);
-    margin: pxem(5) 0;
+    padding-bottom: 0;
+    margin: pxem(8) 0;
     line-height: 1.2em;
     word-break: break-all;
     word-wrap: break-word;
