--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,16 @@ body {
 
 }
 
+.box1 {
+    margin: 10px 5px;
+    padding: 5px;
+    display: inline-block;
+
+    i {
+        font-size: 1.3em;
+    }
+}
+
 .header-bar {
 
 }
