--- a/scss/styles/variables.scss
+++ b/scss/styles/variables.scss
@@ -199,3 +199,10 @@ $tagBorderRadius: $borderRadius;
 $tagLargeBorderRadius: $largeInnerBorderRadius;
 $tagBorderVarient: 5%;
 $tagBackgroundColor: #EFEFEF;
+
+// Label
+// -------------------------
+$labelSmallBorderRadius: $smallInnerBorderRadius;
+$labelBorderRadius: $borderRadius;
+$labelLargeBorderRadius: $largeInnerBorderRadius;
+$labelBackground: #EFEFEF;
