--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -21,6 +21,7 @@
 @import "styles/components/dropdown";
 @import "styles/components/icon";
 @import "styles/components/input";
+@import "styles/components/label";
 @import "styles/components/modal";
 @import "styles/components/nav-bar";
 @import "styles/components/tab";
